# Aplikacja_Strumienie_Wideo

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mask.cpp  mask.h  maskpopup.cpp  maskpopup.h  maskpopup.ui  res.qrc  utils.cpp  utils.h  videorecorder.cpp  videorecorder.h
style/: MyWatch.qss
